<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
    >
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:padding="3dp"
		>
	
		<TextView
		    android:layout_height="wrap_content"
			android:layout_width="150sp"
			android:text="@string/operator_1_min_max"
			android:padding="6dp"
			/>
		<EditText       
			android:id="@+id/operator1min"
			android:text="@string/_10"
		    android:layout_height="wrap_content"
			android:layout_width="50sp"
			android:textSize="18sp"
			android:layout_gravity="center_horizontal"
			android:inputType="numberSigned"/>
		<EditText       
			android:id="@+id/operator1max"
			android:text="@string/_10"
		    android:layout_height="wrap_content"
			android:layout_width="50sp"
			android:textSize="18sp"
			android:layout_gravity="center_horizontal"
			android:inputType="numberSigned"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:padding="3dp"
		>
	
		<TextView
		    android:layout_height="wrap_content"
			android:layout_width="150sp"
			android:text="@string/operator_2_min_max"
			android:padding="6dp"
			/>
		<EditText       
			android:id="@+id/operator2min"
		    android:layout_height="wrap_content"
			android:text="@string/_10"
			android:layout_width="50sp"
			android:textSize="18sp"
			android:layout_gravity="center_horizontal"
			android:inputType="numberSigned"/>
		<EditText       
			android:id="@+id/operator2max"
		    android:layout_height="wrap_content"
			android:text="@string/_10"
			android:layout_width="50sp"
			android:textSize="18sp"
			android:layout_gravity="center_horizontal"
			android:inputType="numberSigned"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:padding="3dp"
		>
	
		<TextView
		    android:layout_height="wrap_content"
			android:layout_width="150sp"
			android:text="@string/operator_type"
			android:padding="6dp"
			/>
		<Spinner
			android:id="@+id/operators"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:prompt="@string/operators_prompt"
			/>
	</LinearLayout>

	<CheckBox
	    android:id="@+id/showPossibleAnswers"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:checked="true"
	    android:text="@string/show_possible_answers" />

 	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">
	
		<Button
		android:id="@+id/saveOptions"
		android:layout_width="66dp"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:text="@string/save_options"
		>
		</Button>
	</LinearLayout> 
</LinearLayout>